--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/font": "^7.3.67",
+    "@mdi/font": "^7.4.47",
     "@popperjs/core": "^2.11.8",
     "@vuepic/vue-datepicker": "^7.4.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.3",
     "mdb-vue-ui-kit": "^4.1.1",
     "mdbvue": "^6.7.4",
     "v-calendar": "^3.1.2",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue-sidebar-menu": "^5.3.0",
     "vue3-carousel": "^0.3.1",
