--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@vuepic/vue-datepicker": "^7.4.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.3",
+    "daypilot-pro-vue": "https://npm.daypilot.org/daypilot-pro-vue/trial/2024.1.5867.tar.gz",
     "mdb-vue-ui-kit": "^4.1.1",
     "mdbvue": "^6.7.4",
     "v-calendar": "^3.1.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue-sidebar-menu": "^5.3.0",
+    "vue3-apexcharts": "^1.5.2",
     "vue3-carousel": "^0.3.1",
     "vuetify": "^3.4.7",
     "vuex": "^4.1.0"
